browser/base/content/browser.css
namespace
url
(
"
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
"
)
;
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
searchbar
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
search
/
search
.
xml
#
searchbar
"
)
;
}
tabbrowser
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
"
)
;
}
.
tabbrowser
-
tabs
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tabs
"
)
;
}
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
+
#
new
-
tab
-
button
#
tabbrowser
-
tabs
[
overflow
=
"
true
"
]
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
TabsToolbar
[
currentset
]
:
not
(
[
currentset
*
=
"
tabbrowser
-
tabs
new
-
tab
-
button
"
]
)
>
#
tabbrowser
-
tabs
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
TabsToolbar
[
customizing
=
"
true
"
]
>
#
tabbrowser
-
tabs
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
{
visibility
:
collapse
;
}
.
tabbrowser
-
tab
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tab
"
)
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
{
-
moz
-
box
-
flex
:
100
;
max
-
width
:
250px
;
min
-
width
:
100px
;
width
:
0
;
-
moz
-
transition
:
min
-
width
200ms
ease
-
out
max
-
width
250ms
ease
-
out
opacity
50ms
ease
-
out
20ms
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
:
not
(
[
fadein
]
)
{
max
-
width
:
0
.
1px
;
min
-
width
:
0
.
1px
;
opacity
:
0
!
important
;
-
moz
-
transition
:
min
-
width
200ms
ease
-
out
max
-
width
250ms
ease
-
out
opacity
50ms
ease
-
out
100ms
;
}
.
tab
-
throbber
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
.
tab
-
label
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
.
tab
-
icon
-
image
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
.
tab
-
close
-
button
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
{
display
:
none
;
}
.
tabbrowser
-
tabs
[
positionpinnedtabs
]
>
.
tabbrowser
-
tab
[
pinned
]
{
position
:
fixed
!
important
;
display
:
block
;
}
#
alltabs
-
popup
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
alltabs
-
popup
"
)
;
}
toolbar
[
printpreview
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
printPreviewBindings
.
xml
#
printpreviewtoolbar
"
)
;
}
#
toolbar
-
menubar
{
-
moz
-
box
-
ordinal
-
group
:
5
;
}
#
navigator
-
toolbox
>
toolbar
:
not
(
#
toolbar
-
menubar
)
:
not
(
#
TabsToolbar
)
{
-
moz
-
box
-
ordinal
-
group
:
50
;
}
#
TabsToolbar
{
-
moz
-
box
-
ordinal
-
group
:
100
;
}
#
TabsToolbar
[
tabsontop
=
"
true
"
]
{
-
moz
-
box
-
ordinal
-
group
:
10
;
}
%
ifdef
CAN_DRAW_IN_TITLEBAR
#
main
-
window
[
inFullscreen
]
>
#
titlebar
#
main
-
window
[
inFullscreen
]
.
titlebar
-
placeholder
#
main
-
window
:
not
(
[
tabsintitlebar
]
)
.
titlebar
-
placeholder
{
display
:
none
;
}
#
titlebar
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
general
.
xml
#
windowdragbox
"
)
;
}
#
titlebar
-
spacer
{
pointer
-
events
:
none
;
}
#
main
-
window
[
tabsintitlebar
]
#
appmenu
-
button
-
container
#
main
-
window
[
tabsintitlebar
]
#
titlebar
-
buttonbox
{
position
:
relative
;
}
%
endif
.
bookmarks
-
toolbar
-
customize
#
wrapper
-
personal
-
bookmarks
>
#
personal
-
bookmarks
>
#
PlacesToolbar
>
hbox
>
#
PlacesToolbarItems
{
display
:
none
;
}
#
wrapper
-
personal
-
bookmarks
[
place
=
"
toolbar
"
]
>
#
personal
-
bookmarks
>
#
PlacesToolbar
>
.
bookmarks
-
toolbar
-
customize
{
display
:
-
moz
-
box
;
}
#
main
-
window
[
disablechrome
]
#
navigator
-
toolbox
[
tabsontop
=
"
true
"
]
>
toolbar
:
not
(
#
toolbar
-
menubar
)
:
not
(
#
TabsToolbar
)
{
visibility
:
collapse
;
}
#
wrapper
-
urlbar
-
container
#
urlbar
-
container
>
#
urlbar
>
toolbarbutton
#
urlbar
-
container
:
not
(
[
combined
]
)
>
#
urlbar
>
toolbarbutton
#
urlbar
-
container
[
combined
]
+
#
reload
-
button
+
#
stop
-
button
#
urlbar
-
container
[
combined
]
+
#
reload
-
button
toolbar
:
not
(
[
mode
=
"
icons
"
]
)
>
#
urlbar
-
container
>
#
urlbar
>
toolbarbutton
toolbar
[
mode
=
"
icons
"
]
>
#
urlbar
-
container
>
#
urlbar
>
#
urlbar
-
reload
-
button
:
not
(
[
displaystop
]
)
+
#
urlbar
-
stop
-
button
toolbar
[
mode
=
"
icons
"
]
>
#
urlbar
-
container
>
#
urlbar
>
#
urlbar
-
reload
-
button
[
displaystop
]
toolbar
[
mode
=
"
icons
"
]
>
#
reload
-
button
:
not
(
[
displaystop
]
)
+
#
stop
-
button
toolbar
[
mode
=
"
icons
"
]
>
#
reload
-
button
[
displaystop
]
{
visibility
:
collapse
;
}
#
feed
-
button
>
.
toolbarbutton
-
menu
-
dropmarker
{
display
:
none
;
}
#
feed
-
menu
>
.
feed
-
menuitem
:
-
moz
-
locale
-
dir
(
rtl
)
{
direction
:
rtl
;
}
#
main
-
window
:
-
moz
-
lwtheme
{
background
-
repeat
:
no
-
repeat
;
background
-
position
:
top
right
;
}
%
ifdef
XP_MACOSX
#
main
-
window
[
inFullscreen
=
"
true
"
]
{
padding
-
top
:
0
;
}
%
endif
#
browser
-
bottombox
[
lwthemefooter
=
"
true
"
]
{
background
-
repeat
:
no
-
repeat
;
background
-
position
:
bottom
left
;
}
splitmenu
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
urlbarBindings
.
xml
#
splitmenu
"
)
;
}
.
splitmenu
-
menuitem
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
menu
.
xml
#
menuitem
"
)
;
list
-
style
-
image
:
inherit
;
-
moz
-
image
-
region
:
inherit
;
}
.
splitmenu
-
menuitem
[
iconic
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
menu
.
xml
#
menuitem
-
iconic
"
)
;
}
.
splitmenu
-
menu
>
.
menu
-
text
:
-
moz
-
any
(
.
splitmenu
-
menu
.
splitmenu
-
menuitem
)
>
.
menu
-
accel
-
container
#
appmenu
-
editmenu
>
.
menu
-
text
#
appmenu
-
editmenu
>
.
menu
-
accel
-
container
{
display
:
none
;
}
.
menuitem
-
tooltip
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
urlbarBindings
.
xml
#
menuitem
-
tooltip
"
)
;
}
/* ... */

