Bug 714281 - Show the all tabs button only when the tab strip overflows. r=mak ui-r=limi
UltraBlame original commit: 50c9e7757aa5a045a998fa27f6ae27d7744f3ebc

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -150,6 +150,26 @@ true
 "
 ]
 )
+~
+#
+alltabs
+-
+button
+#
+tabbrowser
+-
+tabs
+:
+not
+(
+[
+overflow
+=
+"
+true
+"
+]
+)
 +
 #
 new
@@ -251,6 +271,41 @@ button
 visibility
 :
 collapse
+;
+}
+#
+tabbrowser
+-
+tabs
+:
+not
+(
+[
+overflow
+=
+"
+true
+"
+]
+)
+[
+using
+-
+closing
+-
+tabs
+-
+spacer
+]
+~
+#
+alltabs
+-
+button
+{
+visibility
+:
+hidden
 ;
 }
 .
